<resources>
    <string name="app_name">PracticeInter</string>
    <string name="key_youtube_api">AIzaSyA5Z1muPiy_PPdpLHll1DYB0hpDDXadY84</string>
    <string name="facebook_app_id" translatable="false">1549409948696703</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1549409948696703</string>
    <string name="video">Video</string>
    <string name="anime">Anime</string>
    <string name="account">Account</string>
    <string name="pikafeed">News Feed</string>
    <string name="notify">Notifications</string>
    <string name="fanpage">Fanpage Facebook</string>
    <string name="more">More</string>
    <string name="listen">Lyrics</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="relate">Related</string>
    <string name="not_logged_in">Please log in to continue</string>
    <string name="something_wrong">Something went wrong, try again later</string>
    <string name="save_success">Saved video successfully</string>
    <string name="remove_my_video_success">Remove saved video successfully</string>
    <string name="sure_sign_out">Are you sure you want to log out of PiPop?</string>
    <string name="seen_more_detail_word">Sign in to see detail word</string>
    <string name="signin_history">Sign in to access videos that you\'ve watched or saved</string>
    <string name="no_history">You don\'t have a video view history yet</string>
    <string name="search">Search</string>
    <string name="update_profile">Update profile</string>
    <string name="search_videos">Keywords</string>
    <string name="top_new_song">Top newest videos</string>
    <string name="see_more">See more</string>
    <string name="top_favorite">Top favourite videos</string>
    <string name="text_xem_tiep">History</string>
    <string name="top_video">Most watched video</string>
    <string name="list_video">Song list</string>
    <string name="album_hot">Album hot</string>
    <string name="pi_chart">PiChart</string>
    <string name="off">Off</string>
    <string name="replay">Replay</string>
    <string name="continues">Up next</string>
    <string name="play_next">Up next</string>
    <string name="show_furigana">Show Furigana</string>
    <string name="show_lyric_ja">Show Japanese</string>
    <string name="show_romaji">Show Romanji</string>
    <string name="show_lyric_sub">Show translation</string>
    <string name="follow">Follow</string>
    <string name="followed">Following</string>
    <string name="unfollow">Unfollow</string>
    <string name="report_user">Report</string>
    <string name="report_content">Report content</string>
    <string name="do_follow">Do you want to follow %s ?</string>
    <string name="do_unfollow">Unfollow %s?</string>
    <string name="no_following">Not following anybody</string>
    <string name="no_follower">No followers</string>
    <string name="easy">Easy</string>
    <string name="difficult">Difficult</string>
    <string name="medium">Medium</string>
    <string name="loading">Loading…</string>
    <string name="no_connection">No internet connection\n Pull Down to Refresh</string>
    <string name="no_connect">No internet connection\n Touch to Refresh</string>
    <string name="loading_list_view_error">Can not get list videos\n Touch to Refresh</string>
    <string name="loading_lyric_error">Can not get lyrics\n Pull Down to Refresh</string>
    <string name="loading_vocabulary_error">Can not get vocabulary\n Touch to Refresh</string>
    <string name="no_translate">Translation unavailable</string>
    <string name="load_error">Something went wrong\n Touch to Refresh</string>
    <string name="no_translations">No translations</string>
    <string name="no_relate">No related songs</string>
    <string name="empty">No data.</string>
    <string name="empty_search">No data\n Can not find what you are looking for</string>
    <string name="no_vocabulary">No vocabulary</string>
    <string name="no_notify">No notification!</string>
    <string name="loading_notify_error">Can not get notification.\n Touch to Refresh</string>
    <string name="no_signin_notity">You have not logged in.\n Please log in to get notification!</string>
    <string name="loading_list_translate_error">Can not get list video.\n Pull Down to Refresh</string>
    <string name="no_comment">Be the first to comment</string>
    <string name="empty_user_trans">No translations available</string>
    <string name="signin_account">Log into to start using the whole feature of PiPop</string>
    <string name="register">Register</string>
    <string name="sign_in">Log in</string>
    <string name="sign_out">Log out</string>
    <string name="or">or</string>
    <string name="next">Continue</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="profile_update">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="profile_update_info">Edit profile</string>
    <string name="register_facebook">Register with FB</string>
    <string name="register_google">Register with Google</string>
    <string name="register_email">Register with Email</string>
    <string name="account_not_correct">Email or password not correct, please try again. </string>
    <string name="register_agree_text">By registering with PiPop you accept and agree to be bound by the terms and conditions &lt;a href="https://pipop.net/disclaim">terms and conditions&lt;/a> </string>
    <string name="sign_in_facebook">Log in with FB</string>
    <string name="sign_in_google">Log in with Google</string>
    <string name="sign_in_email_name"><font size="13">Enter your name</font></string>
    <string name="sign_in_email_account"><font size="13">Enter your email</font></string>
    <string name="invalid_email">Email invalidate</string>
    <string name="sign_in_email_password"><font size="13">Enter your password</font></string>
    <string name="enter_password">Enter your password</string>
    <string name="invalid_password">Your password must be at least 6 characters</string>
    <string name="sign_in_email_submit_password"><font size="13">Confirm password</font></string>
    <string name="match_submit_password">The password does not match</string>
    <string name="fogot_password">Forgot password.</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="enter_full_info">You need to fill in a form!</string>
    <string name="signin_error">Login failed, please try again later!</string>
    <string name="register_success">Register success</string>
    <string name="register_error">Register failed, please try again later!</string>
    <string name="no_internet">No internet connection</string>
    <string name="error">Error! Please try again later</string>
    <string name="follow_success">Followed successfully</string>
    <string name="unfollow_success">Unfollowed successfully</string>
    <string name="update_success">Updated successfully</string>
    <string name="comment_fail">Comment failed, please try again later</string>
    <string name="see_list">See list</string>
    <string name="send_video">Send video to PiPop</string>
    <string name="enter_link_youtube">Enter link Youtube</string>
    <string name="link_youtube_not_valid">Invalid YouTube link, please check again.</string>
    <string name="signin_contribute">You need to sign in to send video to PiPop</string>
    <string name="contribute_success">Send video successfully</string>
    <string name="name">NAME</string>
    <string name="what_name">Your name</string>
    <string name="japanese_level">Japanese Level</string>
    <string name="sex">Gender</string>
    <string name="birthday">Date of birth</string>
    <string name="badge_viewer">Viewer</string>
    <string name="song_favorite">Favourite songs :</string>
    <string name="song_favorite_v2">Favourite songs</string>
    <string name="what_song_favorite">Your favourite songs</string>
    <string name="singer_favorite">Favourite artists :</string>
    <string name="singer_favorite_v2">Favourite artists</string>
    <string name="what_singer_favorite">Your favourite artists</string>
    <string name="more_profile">About me:</string>
    <string name="more_profile_v2">About me</string>
    <string name="what_more_profile">About me</string>
    <string name="following">Following</string>
    <string name="be_follow">Follower</string>
    <string name="video_saved">Favourite videos</string>
    <string name="video_hot">Outstanding videos</string>
    <string name="video_translated">Translated videos</string>
    <string name="choose">Choose</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="no_info">No information</string>
    <string name="text_report">Report error</string>
    <string name="text_enter_error">Occurred error</string>
    <string name="load_failed">Load failed</string>
    <string name="singer">Artist</string>
    <string name="translator">Translator</string>
    <string name="user">User</string>
    <string name="other">Biography :</string>
    <string name="founding">Active date</string>
    <string name="success">Successfully!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_2">Cancel</string>
    <string name="cancel_3">Cancel</string>
    <string name="ok">OK</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="share">Share</string>
    <string name="share_with">Share with?</string>
    <string name="share_video">shared a video</string>
    <string name="you_want_to">Are you sure you want to</string>
    <string name="clear">Clear</string>
    <string name="clear_search">Clear your search history ?</string>
    <string name="clear_item_search">Clear from your search history ?</string>
    <string name="change_password">Change password</string>
    <string name="change_password_2">Change password</string>
    <string name="password_current">Current password</string>
    <string name="password_new">New password</string>
    <string name="submit_password">Confirm password</string>
    <string name="enter_password_below">Please enter your new password below</string>
    <string name="can_not_null">You cannot leave this field empty</string>
    <string name="password_wrong">Wrong password. Please try again.</string>
    <string name="success_2">Successfully</string>
    <string name="change_password_success">Change password successfully</string>
    <string name="go_homepage">Return to Home page</string>
    <string name="thanks_contribution">Thank you for your contribution</string>
    <string name="go_back">Go back</string>
    <string name="n1" translatable="false">N1</string>
    <string name="n2" translatable="false">N2</string>
    <string name="n3" translatable="false">N3</string>
    <string name="n4" translatable="false">N4</string>
    <string name="n5" translatable="false">N5</string>
    <string name="day">Day:</string>
    <string name="month">Month:</string>
    <string name="year">Year:</string>
    <string name="name_song">Song\'s name</string>
    <string name="name_singer">Artist\'s name</string>
    <string name="link_youtube">Link Youtube</string>
    <string name="send">Send</string>
    <string name="view_translation">View translations</string>
    <string name="want_to_quit">You have not send your Lyrics to PiPop yet. Are you sure you want to quit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_update_premium">Update Premium version</string>
    <string name="text_lh_gop_y">Feedback</string>
    <string name="text_danh_gia_ud">Rate us</string>
    <string name="text_dieu_khoan_sd">Terms</string>
    <string name="blog">Blog Lyrics</string>
    <string name="top_week">Week</string>
    <string name="top_month">Month</string>
    <string name="all">All</string>
</resources>